--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# frontend/Dockerfile
 FROM node:18-alpine
 
 # Set working directory
@@ -7,8 +6,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install ALL dependencies (including dev dependencies)
+RUN npm ci
 
 # Copy source code
 COPY . .
