--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
@@ -9,6 +7,7 @@ services:
       - ./backend/uploads:/app/uploads
     environment:
       - PYTHONPATH=/app
+    restart: unless-stopped
     
   frontend:
     build: ./frontend
@@ -18,3 +17,4 @@ services:
       - backend
     environment:
       - VITE_API_URL=http://localhost:8000
+    restart: unless-stopped
